# glAArg

./: CMakeLists.txt  Makefile  README.md  glAArg ReadMe.rtf
include/glAArg/: AAPrimitives.h
source/: main.c
source/glAArg/: AAPrimitives.c  AAPrimitives.h  AAUtilities.h
source/glAArg.xcode/: project.pbxproj
src/: AAPrimitives.c  AAUtilities.h  main.c
